--- a/weather-app/weather.html
+++ b/weather-app/weather.html
@@ -8,10 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
-    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
-    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9f86acdae0.js" crossorigin="anonymous"></script>
     <script src="./script.js" defer></script>
     <title>Weather</title>
 </head>
@@ -27,11 +23,13 @@
             </form>
         </div>
         <nav class="choose-date">
-            <a href="#" class="today">Oggi</a>
-            <a href="#" class="hours">Orario</a>
-            <a href="#" class="ten-days">10 Giorni</a>
-            <a href="#" class="week-end">Week end</a>
-            <a href="#" class="monthly">Mensile</a>
+            <div class="btn">
+                <button class="today">Oggi</button>
+                <button class="hours">Orario</button>
+                <button class="ten-days">10 Giorni</button>
+                <button class="week-end">Week end</button>
+                <button class="monthly">Mensile</button>
+            </div>
         </nav>
         <div class="container">
             <div class="location">
