git commit -m delete-sunnysky.jpeg-and-add-date

--- a/weather-app/weather.html
+++ b/weather-app/weather.html
@@ -23,17 +23,16 @@
             </form>
         </div>
         <nav class="choose-date">
-            <div class="btn">
-                <button class="today">Oggi</button>
-                <button class="hours">Orario</button>
-                <button class="ten-days">10 Giorni</button>
-                <button class="week-end">Week end</button>
-                <button class="monthly">Mensile</button>
-            </div>
+            <a href="#" class="today">Oggi</a>
+            <a href="#" class="hours">Orario</a>
+            <a href="#" class="ten-days">Week End</a>
+            <a href="#" class="week-end">10 Giorni</a>
+            <a href="#" class="monthly">Mensile</a>
         </nav>
         <div class="container">
             <div class="location">
                 <h2 class="location-timezone"></h2>
+                <p class="currentDate"></p>
                 <div>
                     <img class="location-icon" src="" alt="">
                 </div>
